# ULUI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md  build-android.sh  build.bat  build.sh
android/: EXAMPLES_GUIDE.md  README.md  README_CN.md  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
android/example-nativeactivity-so-gl/: README.md
docs/: ANGLE_INTEGRATION.md  BITMAP_CN.md  BUILD_GUIDE.md  CAMERA2_CN.md  ECS.md  ECS_MIGRATION.md  FILE_CLASS.md  FILE_CLASS_CN.md  FILE_SYSTEM.md  FILE_SYSTEM_CN.md  LOGGER.md  LOGGER_CN.md  LOGGING.md  MEDIACODEC_CN.md  MEDIA_FOUNDATION_CAMERA.md  MEDIA_FOUNDATION_CAMERA_CN.md  MEDIA_FOUNDATION_DECODER.md  MEDIA_FOUNDATION_DECODER_CN.md  MEDIA_FOUNDATION_ENCODER.md  MEDIA_FOUNDATION_ENCODER_CN.md  OBJECT.md  OBJECT_CN.md  OPENGL_CLASSES.md  OPENGL_CLASSES_CN.md  PROJECT_SUMMARY.md  RENDERTARGET_EGLSURFACE_CN.md  STREAMS.md  STREAMS_CN.md  TEXTURE_FBO.md  TEXTURE_FBO_CN.md  TEXTURE_OES_EXTERNAL_CN.md
examples/: CMakeLists.txt  comprehensive_log_test.cpp  ecs_example.cpp  file_example.cpp  file_utils_example.cpp  gl_classes_example.cpp  log_example.cpp  memory_streams_example.cpp  streams_example.cpp
include/: Bitmap.h  BitmapFormat.h  DataInputStream.h  DataOutputStream.h  File.h  FileInputStream.h  FileOutputStream.h  FileUtils.h  InputStream.h  MemoryInputStream.h  MemoryOutputStream.h  OutputStream.h  ecs_app.h  file_system.h  logger.h  object.h  path.h  triangle_app.h
include/android/: Camera2Manager.h  MediaCodecDecoder.h  MediaCodecEncoder.h
include/ecs/: Component.h  ComponentManager.h  ECS.h  Entity.h  Scene.h  System.h  TransformDataStorage2D.h  World.h
include/ecs/components/: Renderable2D.h  RoundedRect2D.h  Sprite2D.h  Transform2D.h
include/gl/: FBO.h  RenderTarget.h  SSBO.h  ShaderProgram.h  Texture2D.h  UBO.h  VAO.h  VBO.h
include/log/: LogLevel.h  LogMessage.h  Logger.h  ObjectLogger.h
include/windows/: MediaFoundationCamera.h  MediaFoundationDecoder.h  MediaFoundationEncoder.h
shaders/: triangle.frag  triangle.vert
src/: Bitmap.cpp  BitmapFormat.cpp  CMakeLists.txt  DataInputStream.cpp  DataOutputStream.cpp  File.cpp  FileInputStream.cpp  FileOutputStream.cpp  FileUtils.cpp  InputStream.cpp  MemoryInputStream.cpp  MemoryOutputStream.cpp  ecs_app.cpp  file_system.cpp  logger.cpp  logger_android.cpp  logger_apple.cpp  logger_common.cpp  logger_unix.cpp  logger_windows.cpp  main.cpp  object.cpp  path.cpp  triangle_app.cpp
src/android/: Camera2Manager.cpp  MediaCodecDecoder.cpp  MediaCodecEncoder.cpp
src/ecs/: ComponentManager.cpp
src/gl/: FBO.cpp  RenderTarget.cpp  SSBO.cpp  ShaderProgram.cpp  Texture2D.cpp  UBO.cpp  VAO.cpp  VBO.cpp
src/log/: ObjectLogger.cpp
src/windows/: MediaFoundationCamera.cpp  MediaFoundationDecoder.cpp  MediaFoundationEncoder.cpp
